--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/spring-auth?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/lending?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.show-sql = true
 spring.jpa.open-in-view = true
 #server.error.include-stacktrace=never
 spring.jpa.hibernate.ddl-auto = create
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
