--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,6 +3,8 @@ spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.show-sql = true
 spring.jpa.open-in-view = true
+server.port=8081
 #server.error.include-stacktrace=never
 spring.jpa.hibernate.ddl-auto = create
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#springdoc.packagesToScan=com.lending., package2
+springdoc.pathsToMatch=/api/v1/loans/**
