configure apache sftp

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,3 +8,5 @@ server.port=8081
 spring.jpa.hibernate.ddl-auto = create
 #springdoc.packagesToScan=com.lending., package2
 springdoc.pathsToMatch=/api/v1/loans/**
+dump.filepath=D:/Projects/temp-me
+dump.schedule=
