add paths for sftp uploads

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,5 +8,10 @@ server.port=8081
 spring.jpa.hibernate.ddl-auto = create
 #springdoc.packagesToScan=com.lending., package2
 springdoc.pathsToMatch=/api/v1/loans/**
-dump.filepath=D:/Projects/temp-me
-dump.schedule=
+sftp.host=localhost
+sftp.username=username
+sftp.password=password
+sftp.port=22
+sftp.privateKey=privateKey
+sftp.remoteFilePath=/usr/logs/
+
