update config files
Signed-off-by: Bill Kariri <24655101+BILLthebuilder@users.noreply.github.com>

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,17 @@
 server.error.include-stacktrace=never
-spring.datasource.url=jdbc:mysql://localhost:3306/spring-auth?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysqldb:3306/lending?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Password@123
+spring.datasource.password=password
+spring.jpa.show-sql = true
+spring.jpa.open-in-view = true
+#server.error.include-stacktrace=never
 spring.jpa.hibernate.ddl-auto = update
+#springdoc.packagesToScan=com.lending., package2
+springdoc.pathsToMatch=/api/v1/loans/**
+sftp.host=localhost
+sftp.username=username
+sftp.password=password
+sftp.port=22
+sftp.privateKey=privateKey
+sftp.remoteFilePath=/usr/logs/
+
